# warpix

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: align.h  config.h  utils.h
src/: align.cpp  config.cpp  main.cpp  utils.cpp
